# SizeRoyale

./: .gitignore  README.md  setup.cfg
.github/workflows/: publish-to-testpypi.yml
sizeroyale/: __init__.py
sizeroyale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sizeroyale/cogs/: royale.py
sizeroyale/lib/: errors.py  img_utils.py  petname.py
sizeroyale/lib/classes/: game.py
