[metadata]
name = sizeroyale
version = attr: sizeroyale.__version__
description = sizeroyale
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = GPLv3
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8,
    Operating System :: OS Independent,
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
keywords = sizebot, sizeroyale
project_urls =
    Source=https://github.com/sizedev/sizeroyale
    Tracker=https://github.com/sizedev/sizeroyale/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes

[options.extras_require]
dev =
    autopep8==1.5.5
    flake8==3.8.4

[options.entry_points]

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401,F403
